--- a/src/create-order/create-order.component.html
+++ b/src/create-order/create-order.component.html
@@ -1,1 +1,58 @@
-<p>create-order works!</p>
+<div class="create-order-container">
+  <form class="create-order-form" (ngSubmit)="Submit(username, itemName, defect, image)">
+    <h2>Create New Order</h2>
+
+    <div class="form-group">
+      <label for="username">Username:</label>
+      <input
+        type="text"
+        id="username"
+        class="form-control"
+        [(ngModel)]="username"
+      name="username"
+      required
+      />
+    </div>
+
+    <div class="form-group">
+      <label for="itemName">Item Name:</label>
+      <input
+        type="text"
+        id="itemName"
+        class="form-control"
+        [(ngModel)]="itemName"
+      name="itemName"
+      required
+      />
+    </div>
+
+    <div class="form-group">
+      <label for="defect">Defect:</label>
+      <textarea
+        id="defect"
+        class="form-control"
+        [(ngModel)]="defect"
+      name="defect"
+      required
+      ></textarea>
+    </div>
+
+    <div class="form-group">
+      <label for="image">Image URL:</label>
+      <input
+        type="text"
+        id="image"
+        class="form-control"
+        [(ngModel)]="image"
+      name="image"
+      required
+      />
+    </div>
+
+    <button type="submit" class="btn btn-primary" [disabled]="!username || !itemName || !defect || !image">
+      Create Order
+    </button>
+  </form>
+</div>
+
+
